lab1/Test/L1-A-7-92.output
Error Type A at Line 5
Error Type A at Line 21
Error Type A at Line 31
Error Type A at Line 44
Error Type A at Line 52
