lab1/Test/L1-A-7-92.cmm
struct {
  int PSMyfeXLTd , LhiQwtkE [ 527534853 ] = UQ && 
    yM4 + ! Ley93fuAqY_3 [ fq = WXnbyrmxQOQGMacW || A 
    <= lghtnMjpKOjG87SS9 - - i37BF ( z5rE8y2NjVhaY0GJuGh 
    || FljAcxPLwsF && x7z9It0MBW4 < u - $( N9k4 && eijUy1SEsyr9jr 
    != QtyunN3Cbb7TiHdJgWPb * ( go3yzB = OdH_F8l6a_S > 
    JdgtwUUXCducUlyoj + - ! ( ExHbcPVSFnBIF == sT ( QQNDjJRjR 
    , wdX ) ) ) / c3L82tB9_ * cxI1I_P94xb3CwV4GmyL - 1075208094 
    ) >= ! - dgfiK ) / 1079205329.374356593 * - FhO87nMoA4 
    ( ) ] . J2Hg27joYZGQUOeC ;
}HZQJ5U6m 
;
float AL0 ( ) {
  q0DuiU5U ;
}
int ;
int eTJGipTmso ( struct k27ZZ0qS {
  struct SnedIXRjtLc2C6E ommXOc_ab ;
}s1 , struct Vh JA3uZxoBIl ) {
}
:int ;
int ;
int ;
int HtIF4ZN6a , UoeS6Hs 

;
int ;
int XkXaf ( ) {
}
int ;
$int ;
int ;
int d2V13N1i2I1i1nX_785 ( ) {
}
int guUQIulN6 ( ) {
}
int ;
int ;
int h9npUNOUcwJh372P1hBB ( ) {
  dV6eu3yAc94nb9 ;
  if ( UN0EyuH )   LQUPn ;
else   while ( srL6nocFjmdG ) {
    if ( Z )     t6NTUX0 ;
else     if ( qv_ ~)     YB4gjc2rGLrXX ;


  }

  if ( eXo )   return EHdg ;

}
%